# mailoxide

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
.github/workflows/: ci.yml
src/: main.rs
tests/: cli.rs
