[package]
name = "mailoxide"
version = "0.1.0"
edition = "2021"
authors = ["Sol Astrius Phoenix <me@danielsol.dev>"]
description = "A blazing fast, parallel EML to MBOX converter"
license = "MIT"
readme = "README.md"
repository = "https://github.com/solastrius/mailoxide"
keywords = ["email", "eml", "mbox", "converter", "utility"]
categories = ["command-line-utilities", "email"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
mailparse = "0.14.1"
rayon = "1.9.0"
thiserror = "1.0.57"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
